--- a/css/style.css
+++ b/css/style.css
@@ -145,6 +145,20 @@ body {
   }
 }
 
-.swal-button {
-  background: #2c3e50;
+button {
+  padding: .5rem .7rem;
+  color: white;
+  font-size: medium;
+  margin: .1rem;
+  border: none;
+  border-radius: .5rem;
+  background-color: #2c3e50c4;
+}
+
+#inputUpload {
+  display: none;
+}
+
+#audio {
+  margin-top: .5rem;
 }
